--- a/requirements.txt
+++ b/requirements.txt
@@ -1,21 +1,21 @@
-adjustText==1.0.4
-geopandas==0.13.2
-hdbscan==0.8.33
-ipywidgets==7.7.1
-matplotlib==3.7.1
-matplotlib-inline==0.1.6
-matplotlib-venn==0.11.10
-numpy==1.25.2
-pandas==1.5.3
-pandas-datareader==0.10.0
-pandas-gbq==0.19.2
-pandas-stubs==1.5.3.230304
-plotly==5.15.0
-prettytable==3.10.0
-requests==2.31.0
-requests-oauthlib==1.3.1
-scikit-learn==1.2.2
-scipy==1.11.4
-seaborn==0.13.1
-sklearn-pandas==2.2.0
-umap-learn==0.5.5
+adjustText
+geopandas
+hdbscan
+ipywidgets
+matplotlib
+matplotlib-inline
+matplotlib-venn
+numpy
+pandas
+pandas-datareader
+pandas-gbq
+pandas-stubs
+plotly
+prettytable
+requests
+requests-oauthlib
+scikit-learn
+scipy
+seaborn
+sklearn-pandas
+umap-learn
